# swagger.json
@@ -197,6 +197,16 @@
                                 }
                             }
                         }
+                    },
+                    "500": {
+                        "description": "Server error",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/CurrencyError"
+                                }
+                            }
+                        }
                     }
                 }
             }
@@ -498,17 +508,66 @@
                     "status": {
                         "type": "string",
                         "description": "status",
+                        "example": "success"
+                    },
+                    "code": {
+                        "type": "integer",
+                        "description": "status code",
+                        "example": 200
+                    },
+                    "data": {
+                        "type": "object",
+
+                        "properties": {
+                            "currency": {
+                                "type": "array",
+                                "items": {
+                                    "type": "object",
+                                    "properties": {
+                                        "currencyA": {
+                                            "type": "string",
+                                            "description": "currencyA",
+                                            "example": "EUR"
+                                        },
+                                        "currencyB": {
+                                            "type": "string",
+                                            "description": "currencyB",
+                                            "example": "UAH"
+                                        },
+                                        "rateBuy": {
+                                            "type": "string",
+                                            "description": "buy",
+                                            "example": "38.35"
+                                        },
+                                        "rateSell": {
+                                            "type": "string",
+                                            "description": "sale",
+                                            "example": "39.84"
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            },
+            "CurrencyError": {
+                "type": "object",
+                "properties": {
+                    "status": {
+                        "type": "string",
+                        "description": "status",
                         "example": "error"
                     },
                     "code": {
                         "type": "integer",
                         "description": "status code",
-                        "example": 401
+                        "example": 500
                     },
                     "message": {
                         "type": "string",
                         "description": "error message",
-                        "example": "jwt expired"
+                        "example": "Server error"
                     }
                 }
             }
